# pic

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  CLAUDE.md  LICENSE  MODULE.bazel  README.md  SGM.md  buildall  lefthook.yml  pytest.ini  ruff.toml  sourceme  testall
.github/workflows/: ci.yml  picblobs-cli.yml  picblobs.yml
bazel/: BUILD.bazel  blob.bzl  lint.bzl  platforms.bzl  qemu_test.bzl  uv.bzl
ci/: Dockerfile  dev.sh
context/: ul_exec.txt  ul_exec_freebsd.txt
docs/: book.toml
docs/src/: SUMMARY.md  adding-architecture.md  adding-syscall.md  building.md  code-generation.md  formatting.md  getting-started.md  introduction.md  kernel-toolkit.md  picblobs-cli.md  platform-support.md  project-structure.md  running.md  specification.md  test-runners.md  testing.md  writing-blobs.md
kernel/: BUILD.bazel  REORGANIZE.md  build.sh  lab.md  run_vm_test.sh
kernel/ebpf/: kernel_loader.py  kernel_mem.py  kernel_prog.py  loader.py
kernel/kmod/: Makefile  build_examples.py  load_kmod.py  pic_kblob.c  pic_kmod.c  portable_kmod.py
kernel/kmod/examples/: Makefile  b64_kernel.h  blob_ctx.h  hello_ring0.S  kshell.c  kshell_nacl.c  nop_sled.S  pic_hook.c  tweetnacl_kernel.h  who_am_i.S
kernel/lp/: listener.py
kernel/vm/: kshell_nacl_test_listener.py  kshell_test_listener.py  patch_vermagic.py  vm_harness.py
mbed/: BUILD.bazel  build_blobs.sh  main.cpp  mbed-os.lib  mbed_app.json  platform_mbed.cpp  platform_mbed.h
python/: BUILD.bazel  README.md  pyproject.toml  requirements.txt
python/picblobs/: __init__.py  __main__.py  _builder.py  _cross_compile.py  _enums.py  _extractor.py  _introspect.py  _objdump.py  _qemu.py  cli.py  debug.py  runner.py
python/tests/: _test_env.py  conftest.py  payload_defs.py  test_cli.py  test_extractor.py  test_freebsd_syscall_wrapper.py  test_packaging_metadata.py  test_payload_alloc_jump.py  test_payload_hello.py  test_payload_nacl.py  test_payload_reflective.py  test_payload_stager.py  test_payload_ul_exec.py  test_python_api.py  test_quality_paths.py  test_release_loading.py  test_runner.py  test_sync.py
python_cli/: README.md  pyproject.toml
python_cli/picblobs_cli/: __init__.py  __main__.py  cli.py
python_cli/tests/: test_picblobs_cli.py
release/: BUILD.bazel
spec/decisions/: ADR-001-gcc-linux-toolchains-for-all-targets.md  ADR-002-bazel-bootlin-toolchains.md  ADR-003-custom-linker-scripts.md  ADR-004-c-header-config-source-of-truth.md  ADR-005-djb2-hash-for-windows-resolution.md  ADR-006-single-syscall-assembly-primitive.md  ADR-007-pyelftools-extraction.md  ADR-008-uv-python-packaging.md  ADR-009-config-struct-endianness.md  ADR-010-testing-infrastructure-strategy.md  ADR-011-build-pipeline-security.md  ADR-012-reflective-loader-feature-scope.md  ADR-013-runtime-error-handling.md  ADR-014-blob-execution-model.md  ADR-015-icache-flush-via-syscall.md  ADR-016-bazel-9-bzlmod-project-structure.md  ADR-017-c-linting-and-static-analysis.md  ADR-018-so-shipping-runtime-extraction.md  ADR-019-runner-debug-facility.md  ADR-020-mips-self-relocation.md  ADR-021-embedded-cross-compiled-runners.md  ADR-022-registry-driven-code-generation.md  ADR-023-s390x-architecture.md  ADR-024-debug-build-variant.md  ADR-025-windows-calling-convention.md  ADR-026-runner-tools-split-into-picblobs-cli.md
spec/models/: MOD-001-system-context.md  MOD-002-build-pipeline.md  MOD-003-blob-binary-layout.md  MOD-004-syscall-layer-architecture.md  MOD-005-windows-api-resolution.md  MOD-006-test-architecture.md  MOD-007-release-tarball-format.md  SEQ-001-alloc-jump-execution.md  SEQ-002-reflective-loader-execution.md  SEQ-003-bootstrap-stager-execution.md
spec/requirements/: REQ-001-syscall-assembly-primitive.md  REQ-002-linux-syscall-coverage.md  REQ-003-freebsd-syscall-coverage.md  REQ-004-syscall-number-tables.md  REQ-005-peb-teb-walk.md  REQ-006-djb2-function-resolution.md  (+14 more)
sprints/: SPRINT-001.md  instructions.md
src/: BUILD.bazel
src/blob/: BUILD.bazel
src/include/picblobs/: BUILD.bazel  arch.h  cache.h  log.h  mem.h  net.h  picblobs.h  platform.h  reloc.h  section.h  syscall.h  types.h
src/include/picblobs/crypto/: randombytes.h  tweetnacl.h
src/include/picblobs/os/: freebsd.h  linux.h  windows.h
src/include/picblobs/sys/: accept.h  bind.h  close.h  connect.h  dup2.h  exit.h  exit_group.h  fstat.h  listen.h  llseek.h  lseek.h  mmap.h  mprotect.h  munmap.h  open.h  pipe.h  read.h  setsockopt.h  socket.h  write.h
src/include/picblobs/sys/freebsd/: nr.h
src/include/picblobs/sys/linux/: nr.h
src/include/picblobs/syscall/: aarch64.h  arm.h  i386.h  mips.h  powerpc.h  powerpc64.h  riscv.h  s390x.h  sparc.h  x86_64.h
src/include/picblobs/win/: djb2.h  pe.h  peb.h  resolve.h  teb.h
src/linker/: BUILD.bazel  blob.ld  blob_test_freebsd.ld
src/payload/: BUILD.bazel  alloc_jump.c  alloc_jump_windows.c  extract.bzl  hello.c  hello_windows.c  nacl_client.c  nacl_hello.c  nacl_server.c  reflective_pe_windows.c  stager_fd.c  stager_fd_windows.c  stager_mmap.c  stager_pipe.c  stager_pipe_windows.c  stager_tcp.c  stager_tcp_windows.c  test_fd_ok.c  test_mmap_ok.c  test_pass.c  test_pipe_ok.c  test_tcp_ok.c  ul_exec.c
src/syscall/: BUILD.bazel
tests/: BUILD.bazel  defs.bzl  nacl_e2e.sh  test_mbed_runner.cpp  verify_pic.sh
tests/mbed_mock/: EthernetInterface.h  mbed.h
tests/runners/: BUILD.bazel
tests/runners/freebsd/: BUILD.bazel  runner.c
tests/runners/freebsd/start/: s390x.h
tests/runners/linux/: BUILD.bazel  runner.c  runner_hosted.c
tests/runners/linux/start/: arm.h  i386.h  mips.h  powerpc.h  powerpc64.h  riscv.h  sparc.h
tests/runners/windows/: BUILD.bazel  runner.c
tests/runners/windows/start/: aarch64.h  x86_64.h
toolchains/: BUILD.bazel  arm_none_eabi.bzl  bootlin.bzl  cc_toolchain_config.bzl  defs.bzl  qemu.bzl
tools/: BUILD.bazel  c_lint_check.sh  check_dist.py  config_codegen.py  extract_release.py  fmt.py  fmt_check.sh  generate.py  generate_check.sh  lint.py  lint_check.sh  package_release.py  quality_paths.py  registry.py  stage_blobs.py  validate_wine.py  with_dev_python.sh
(+16 files in other folders)
