"""picblobs — position-independent code blob library."""

module(
    name = "picblobs",
    version = "0.1.0",
)

# --- C/C++ rules ---
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# --- Shell rules ---
bazel_dep(name = "rules_shell", version = "0.6.1")

# --- Python rules ---
bazel_dep(name = "rules_python", version = "1.7.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//python:requirements.txt",
)

use_repo(pip, "pip")

# --- Bootlin cross-compilation toolchains ---
bootlin = use_extension("//toolchains:bootlin.bzl", "bootlin")

bootlin.toolchain(
    name = "x86_64",
    arch = "x86-64",
    extra_cflags = ["-march=x86-64"],
    sha256 = "932823ca9a3e067e7e2a29810a666d20c9cc5bb550de947f6879e38ace1aa955",
    triple = "x86_64-buildroot-linux-gnu",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "i686",
    arch = "x86-i686",
    extra_cflags = ["-march=i686"],
    sha256 = "023e4f03cd212b5545c4c184238693b61b40fa36d257b84546100a92ea2c1d8b",
    triple = "i686-buildroot-linux-gnu",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "aarch64",
    arch = "aarch64",
    extra_cflags = [],
    sha256 = "b0fad860eb94b503a56d66ca8b9ba06d2d4826943e37ebd1d7217423f6ea5bb2",
    triple = "aarch64-buildroot-linux-gnu",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "armv5",
    arch = "armv5-eabi",
    extra_cflags = ["-march=armv5te"],
    sha256 = "13f2bea0b06fe560fe60d199cd9d3fb1f20e2335bcc79b90c5130c3916a3ed92",
    triple = "arm-buildroot-linux-gnueabi",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "s390x",
    arch = "s390x-z13",
    extra_cflags = ["-march=z13"],
    sha256 = "b37ed02693a370f28434c34655c64bcb96dc0d428a92ddbc99feb5608bcf64a1",
    triple = "s390x-buildroot-linux-gnu",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "mipsel32",
    arch = "mips32el",
    extra_cflags = ["-mips32", "-EL"],
    sha256 = "d0139b6ade7f3b72a5f9c33814696af817661e826c9c501f6cefcab4ac684c8f",
    triple = "mipsel-buildroot-linux-gnu",
    version = "2024.05-1",
)

bootlin.toolchain(
    name = "mipsbe32",
    arch = "mips32",
    extra_cflags = ["-mips32", "-EB"],
    sha256 = "677402719c545e49eb71c3d27a5f495af38f60463b40ed705e24e43a9834c137",
    triple = "mips-buildroot-linux-gnu",
    version = "2024.05-1",
)

# Register all Bootlin toolchains.
use_repo(
    bootlin,
    "bootlin_aarch64",
    "bootlin_armv5",
    "bootlin_i686",
    "bootlin_mipsbe32",
    "bootlin_mipsel32",
    "bootlin_s390x",
    "bootlin_x86_64",
)

# --- ARM GNU bare-metal toolchain for Cortex-M (hosted-mode PIC blobs) ---
arm_none_eabi = use_extension("//toolchains:arm_none_eabi.bzl", "arm_none_eabi")

arm_none_eabi.toolchain(
    url = "https://developer.arm.com/-/media/Files/downloads/gnu/13.3.rel1/binrel/arm-gnu-toolchain-13.3.rel1-x86_64-arm-none-eabi.tar.xz",
    strip_prefix = "arm-gnu-toolchain-13.3.rel1-x86_64-arm-none-eabi",
    sha256 = "95c011cee430e64dd6087c75c800f04b9c49832cc1000127a92a97f9c8d83af4",
    extra_cflags = ["-mcpu=cortex-m4", "-mthumb", "-mfloat-abi=soft"],
)

use_repo(arm_none_eabi, "arm_none_eabi")

# --- QEMU user-mode static (system prerequisite, wrapped for Bazel) ---
qemu = use_extension("//toolchains:qemu.bzl", "qemu")

use_repo(qemu, "qemu_arm_static")

register_toolchains("//toolchains:all")
