load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Kernel module VM tests — hermetic QEMU-based testing
#
# Usage:
#   bazel test //kernel:ubuntu_suite
#   bazel test //kernel:kshell_ubuntu

_DATA = glob(["**/*.py", "**/*.c", "**/*.h", "**/*.S", "**/Makefile"])
_TAGS = ["manual", "exclusive", "no-sandbox"]

# --- Ubuntu 24.04 ---

sh_test(name = "kmod_build_ubuntu",     srcs = ["run_vm_test.sh"], args = ["kmod-build",     "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "kmod_nopanic_ubuntu",   srcs = ["run_vm_test.sh"], args = ["kmod-nopanic",   "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "kshell_ubuntu",         srcs = ["run_vm_test.sh"], args = ["kshell",          "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "kshell_nacl_ubuntu",    srcs = ["run_vm_test.sh"], args = ["kshell-nacl",     "ubuntu", "900"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "kshell_ff_ubuntu",      srcs = ["run_vm_test.sh"], args = ["kshell-ff",       "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "kshell_upload_ubuntu",  srcs = ["run_vm_test.sh"], args = ["kshell-upload",   "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")
sh_test(name = "examples_build_ubuntu", srcs = ["run_vm_test.sh"], args = ["examples-build",  "ubuntu", "600"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")

# --- Alpine 3.21 ---

sh_test(name = "kmod_build_alpine",     srcs = ["run_vm_test.sh"], args = ["kmod-build",     "alpine", "300"], data = _DATA, tags = _TAGS, size = "enormous", timeout = "eternal")

# --- Suites ---

test_suite(name = "ubuntu_suite", tags = ["manual"], tests = [
    ":kmod_build_ubuntu",
    ":kmod_nopanic_ubuntu",
    ":kshell_ubuntu",
    ":kshell_nacl_ubuntu",
    ":kshell_ff_ubuntu",
    ":kshell_upload_ubuntu",
    ":examples_build_ubuntu",
])

test_suite(name = "alpine_suite", tags = ["manual"], tests = [
    ":kmod_build_alpine",
])
