[project]
name = "picblobs"
version = "0.1.0"
description = "Position-independent code blob library"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["pic", "shellcode", "security", "cross-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/williamkborn/pic"
Documentation = "https://github.com/williamkborn/pic/tree/main/docs"
Repository = "https://github.com/williamkborn/pic"
Issues = "https://github.com/williamkborn/pic/issues"

[project.scripts]
picblobs = "picblobs.cli:main"

[project.optional-dependencies]
elf = [
    "pyelftools>=0.31",
]
dev = [
    "picblobs[elf]",
    "pytest>=8.0",
    "pycparser>=2.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["picblobs/_blobs/**"]

[tool.hatch.build.targets.wheel]
packages = ["picblobs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
