[project]
name = "picblobs-cli"
version = "0.1.0"
description = "Click CLI + cross-compiled runners for the picblobs library"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"

# picblobs brings the blob data + builder API; click is our CLI framework.
# The runners ship as package data, so no extra dependency is needed to
# execute them (QEMU is expected to be on the user's PATH at run time).
dependencies = [
    "picblobs>=0.1.0",
    "click>=8.0",
]

[project.scripts]
picblobs-cli = "picblobs_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picblobs_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Cross-compiled test runners for every (runner_type, arch) combination.
# Populated by tools/stage_blobs.py at build time.
"picblobs_cli/_runners" = "picblobs_cli/_runners"

[tool.pytest.ini_options]
testpaths = ["tests"]
