[project]
name = "picblobs-cli"
version = "0.1.0"
description = "Click CLI + cross-compiled runners for the picblobs library"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
keywords = ["pic", "shellcode", "security", "qemu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# picblobs brings the blob data + builder API; click is our CLI framework.
# The runners ship as package data, so no extra dependency is needed to
# execute them (QEMU is expected to be on the user's PATH at run time).
dependencies = [
    "picblobs>=0.1.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/williamkborn/pic"
Documentation = "https://github.com/williamkborn/pic/tree/main/docs"
Repository = "https://github.com/williamkborn/pic"
Issues = "https://github.com/williamkborn/pic/issues"

[project.scripts]
picblobs-cli = "picblobs_cli.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["picblobs_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
