"""Build tools — formatting, linting."""

load("@rules_shell//shell:sh_test.bzl", "sh_test")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "format_check",
    srcs = ["fmt_check.sh"],
    local = True,
    tags = ["lint"],
)

sh_test(
    name = "generate_check",
    srcs = ["generate_check.sh"],
    local = True,
    tags = ["lint"],
)

sh_test(
    name = "lint_check",
    srcs = ["lint_check.sh"],
    local = True,
    tags = ["lint"],
)
