"""Blob binary targets.

Each blob type gets a pic_blob() target per OS/arch combination.
The blob_collection() target aggregates all blobs for wheel packaging.

Blob types:
  - alloc_jump       : allocate RWX, copy payload, execute
  - reflective_pe    : parse and load PE from memory (Windows)
  - stager_tcp       : TCP connect-back stager
  - stager_fd        : file descriptor stager
  - stager_pipe      : named pipe stager
  - stager_mmap      : memory-mapped file stager
"""

load("//bazel:blob.bzl", "blob_collection")

package(default_visibility = ["//visibility:public"])

# TODO: Add pic_blob() targets for each blob type once source is written.
# Example:
#
# load("//bazel:blob.bzl", "pic_blob")
#
# pic_blob(
#     name = "alloc_jump_linux_x86_64",
#     srcs = ["alloc_jump.c"],
#     deps = ["//src/syscall:syscall"],
#     blob_type = "alloc_jump",
#     target_os = "linux",
#     target_arch = "x86_64",
#     linker_script = "//src/linker:blob.ld",
# )

blob_collection(
    name = "all",
    blobs = [],  # TODO: populate as blob targets are added
)
