"""Syscall abstraction layer (MOD-004).

Provides the three-layer syscall interface:
  1. Assembly primitive (one instruction per arch) — REQ-001
  2. Syscall number tables (per OS, per arch) — REQ-004
  3. C wrapper functions — REQ-002, REQ-003
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "syscall",
    hdrs = [],  # TODO: add per-OS/arch headers
    deps = [
        "//src/include/picblobs:headers",
    ],
)
