"""Public headers for picblobs — shared by blobs and test runners."""

load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//src:__subpackages__", "//tests:__subpackages__"])

cc_library(
    name = "headers",
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = "//src/include",
)
