"""FreeBSD test runners — test-mode shim verification."""

load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:lint.bzl", "cppcheck_test")

package(default_visibility = ["//tests:__subpackages__", "//python:__subpackages__", "//release:__pkg__"])

cc_binary(
    name = "runner",
    srcs = ["runner.c"],
    deps = [
        "//src/include/picblobs:headers",
    ],
)

cppcheck_test(
    name = "runner_cppcheck",
    srcs = ["runner.c"],
    include_dirs = ["src/include"],
)
